--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
             <table>
         
               <tr>
-                <th><input type="radio" name="kensaku" id="cairo" value="360630">
+                <th><input type="radio" name="kensaku" id="city" value="360630">
                   <label for="cairo">カイロ</label></th>
                 <th id = "11"></th> <th id = "12"></th>
                 <th id = "13"></th> <th id = "14"></th> <th id = "15"></th>
@@ -39,7 +39,7 @@
                 <th id = "19"></th> <th id = "1a"></th> <th id = "1b"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="moscow" value="524901">
+                <th><input type="radio" name="kensaku" id="city" value="524901">
                   <label for="moscow">モスクワ</label></th>
                 <th id = "21"></th> <th id = "22"></th>
                 <th id = "23"></th> <th id = "24"></th> <th id = "25"></th>
@@ -47,7 +47,7 @@
                 <th id = "29"></th> <th id = "2a"></th> <th id = "2b"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="johannesburg" value="993800">
+                <th><input type="radio" name="kensaku" id="city" value="993800">
                   <label for="johannesburg">ヨハネスブルク</label></th>
                 <th id = "31"></th> <th id = "32"></th>
                 <th id = "33"></th> <th id = "34"></th> <th id = "35"></th>
@@ -55,7 +55,7 @@
                 <th id = "39"></th> <th id = "3a"></th> <th id = "3b"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="beijing" value="1816670">
+                <th><input type="radio" name="kensaku" id="city" value="1816670">
                   <label for="beijing">北京</label></th>
                 <th id = "41"></th> <th id = "42"></th>
                 <th id = "43"></th> <th id = "44"></th> <th id = "45"></th>
@@ -63,7 +63,7 @@
                 <th id = "49"></th> <th id = "4a"></th> <th id = "4b"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="tokyo" value="1850147">
+                <th><input type="radio" name="kensaku" id="city" value="1850147">
                   <label for="tokyo">東京</label></th>
                 <th id = "51"></th> <th id = "52"></th>
                 <th id = "53"></th> <th id = "54"></th> <th id = "55"></th>
@@ -71,7 +71,7 @@
                 <th id = "59"></th> <th id = "5a"></th> <th id = "5b"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="singapore" value="1880252">
+                <th><input type="radio" name="kensaku" id="city" value="1880252">
                   <label for="singapore">シンガポール</label></th>
                 <th id = "61"></th> <th id = "62"></th>
                 <th id = "63"></th> <th id = "64"></th> <th id = "65"></th>
@@ -79,7 +79,7 @@
                 <th id = "69"></th> <th id = "6a"></th> <th id = "6b"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="sydney" value="2147714">
+                <th><input type="radio" name="kensaku" id="city" value="2147714">
                   <label for="sydney">シドニー</label></th>
                 <th id = "71"></th> <th id = "72"></th>
                 <th id = "73"></th> <th id = "74"></th> <th id = "75"></th>
@@ -87,7 +87,7 @@
                 <th id = "79"></th> <th id = "7a"></th> <th id = "7b"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="london" value="2643743">
+                <th><input type="radio" name="kensaku" id="city" value="2643743">
                   <label for="london">ロンドン</label></th>
                 <th id = "81"></th> <th id = "82"></th>
                 <th id = "83"></th> <th id = "84"></th> <th id = "85"></th>
@@ -95,7 +95,7 @@
                 <th id = "89"></th> <th id = "8a"></th> <th id = "8b"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="paris" value="2968815">
+                <th><input type="radio" name="kensaku" id="city" value="2968815">
                   <label for="paris">パリ</label></th>
                 <th id = "91"></th> <th id = "92"></th>
                 <th id = "93"></th> <th id = "94"></th> <th id = "95"></th>
@@ -103,7 +103,7 @@
                 <th id = "99"></th> <th id = "9a"></th> <th id = "9b"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="riodejaneiro" value="3451189">
+                <th><input type="radio" name="kensaku" id="city" value="3451189">
                   <label for="riodejaneiro">リオデジャネイロ</label></th>
                 <th id = "a1"></th> <th id = "a2"></th>
                 <th id = "a3"></th> <th id = "a4"></th> <th id = "a5"></th>
@@ -111,7 +111,7 @@
                 <th id = "a9"></th> <th id = "aa"></th> <th id = "ab"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="newyork" value="5128581">
+                <th><input type="radio" name="kensaku" id="city" value="5128581">
                   <label for="newyork">ニューヨーク</label></th>
                 <th id = "b1"></th> <th id = "b2"></th>
                 <th id = "b3"></th> <th id = "b4"></th> <th id = "b5"></th>
@@ -119,7 +119,7 @@
                 <th id = "b9"></th> <th id = "ba"></th> <th id = "bb"></th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="losangeles" value="5368361">
+                <th><input type="radio" name="kensaku" id="city" value="5368361">
                   <label for="losangeles">ロサンゼルス</label></th>
                 <th id = "c1"></th> <th id = "c2"></th>
                 <th id = "c3"></th> <th id = "c4"></th> <th id = "c5"></th>
