--- a/test.html
+++ b/test.html
@@ -15,6 +15,8 @@
   <body>
     <header>
         <h1> 今日の天気 </h1>
+        <p><button  id = "sendRequest">検索</button></p>
+    <div id = "placeholder"></div>
     </header>
   
       <!-- 第四、五回課題
@@ -33,98 +35,98 @@
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="360630">
                   <label for="cairo">カイロ</label></th>
-                <th id = "11"></th> <th id = "12"></th>
-                <th id = "13"></th> <th id = "14"></th> <th id = "15"></th>
-                <th id = "16"></th> <th id = "17"></th> <th id = "18"></th>
-                <th id = "19"></th> <th id = "1a"></th> <th id = "1b"></th>
+                <th id = "11"> </th> <th id = "12"> </th>
+                <th id = "13"> </th> <th id = "14"> </th> <th id = "15"> </th>
+                <th id = "16"> </th> <th id = "17"> </th> <th id = "18"> </th>
+                <th id = "19"> </th> <th id = "1a"> </th> <th id = "1b"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="524901">
                   <label for="moscow">モスクワ</label></th>
-                <th id = "21"></th> <th id = "22"></th>
-                <th id = "23"></th> <th id = "24"></th> <th id = "25"></th>
-                <th id = "26"></th> <th id = "27"></th> <th id = "28"></th>
-                <th id = "29"></th> <th id = "2a"></th> <th id = "2b"></th>
+                <th id = "21"> </th> <th id = "22"> </th>
+                <th id = "23"> </th> <th id = "24"> </th> <th id = "25"> </th>
+                <th id = "26"> </th> <th id = "27"> </th> <th id = "28"> </th>
+                <th id = "29"> </th> <th id = "2a"> </th> <th id = "2b"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="993800">
                   <label for="johannesburg">ヨハネスブルク</label></th>
-                <th id = "31"></th> <th id = "32"></th>
-                <th id = "33"></th> <th id = "34"></th> <th id = "35"></th>
-                <th id = "36"></th> <th id = "37"></th> <th id = "38"></th>
-                <th id = "39"></th> <th id = "3a"></th> <th id = "3b"></th>
+                <th id = "31"> </th> <th id = "32"> </th>
+                <th id = "33"> </th> <th id = "34"> </th> <th id = "35"> </th>
+                <th id = "36"> </th> <th id = "37"> </th> <th id = "38"> </th>
+                <th id = "39"> </th> <th id = "3a"> </th> <th id = "3b"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="1816670">
                   <label for="beijing">北京</label></th>
-                <th id = "41"></th> <th id = "42"></th>
-                <th id = "43"></th> <th id = "44"></th> <th id = "45"></th>
-                <th id = "46"></th> <th id = "47"></th> <th id = "48"></th>
-                <th id = "49"></th> <th id = "4a"></th> <th id = "4b"></th>
+                <th id = "41"> </th> <th id = "42"> </th>
+                <th id = "43"> </th> <th id = "44"> </th> <th id = "45"> </th>
+                <th id = "46"> </th> <th id = "47"> </th> <th id = "48"> </th>
+                <th id = "49"> </th> <th id = "4a"> </th> <th id = "4b"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="1850147">
                   <label for="tokyo">東京</label></th>
-                <th id = "51"></th> <th id = "52"></th>
-                <th id = "53"></th> <th id = "54"></th> <th id = "55"></th>
-                <th id = "56"></th> <th id = "57"></th> <th id = "58"></th>
-                <th id = "59"></th> <th id = "5a"></th> <th id = "5b"></th>
+                <th id = "51"> </th> <th id = "52"> </th>
+                <th id = "53"> </th> <th id = "54"> </th> <th id = "55"> </th>
+                <th id = "56"> </th> <th id = "57"> </th> <th id = "58"> </th>
+                <th id = "59"> </th> <th id = "5a"> </th> <th id = "5b"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="1880252">
                   <label for="singapore">シンガポール</label></th>
-                <th id = "61"></th> <th id = "62"></th>
-                <th id = "63"></th> <th id = "64"></th> <th id = "65"></th>
-                <th id = "66"></th> <th id = "67"></th> <th id = "68"></th>
-                <th id = "69"></th> <th id = "6a"></th> <th id = "6b"></th>
+                <th id = "61"> </th> <th id = "62"> </th>
+                <th id = "63"> </th> <th id = "64"> </th> <th id = "65"> </th>
+                <th id = "66"> </th> <th id = "67"> </th> <th id = "68"> </th>
+                <th id = "69"> </th> <th id = "6a"> </th> <th id = "6b"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="2147714">
                   <label for="sydney">シドニー</label></th>
-                <th id = "71"></th> <th id = "72"></th>
-                <th id = "73"></th> <th id = "74"></th> <th id = "75"></th>
-                <th id = "76"></th> <th id = "77"></th> <th id = "78"></th>
-                <th id = "79"></th> <th id = "7a"></th> <th id = "7b"></th>
+                <th id = "71"> </th> <th id = "72"> </th>
+                <th id = "73"> </th> <th id = "74"> </th> <th id = "75"> </th>
+                <th id = "76"> </th> <th id = "77"> </th> <th id = "78"> </th>
+                <th id = "79"> </th> <th id = "7a"> </th> <th id = "7b"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="2643743">
                   <label for="london">ロンドン</label></th>
-                <th id = "81"></th> <th id = "82"></th>
-                <th id = "83"></th> <th id = "84"></th> <th id = "85"></th>
-                <th id = "86"></th> <th id = "87"></th> <th id = "88"></th>
-                <th id = "89"></th> <th id = "8a"></th> <th id = "8b"></th>
+                <th id = "81"> </th> <th id = "82"> </th>
+                <th id = "83"> </th> <th id = "84"> </th> <th id = "85"> </th>
+                <th id = "86"> </th> <th id = "87"> </th> <th id = "88"> </th>
+                <th id = "89"> </th> <th id = "8a"> </th> <th id = "8b"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="2968815">
                   <label for="paris">パリ</label></th>
-                <th id = "91"></th> <th id = "92"></th>
-                <th id = "93"></th> <th id = "94"></th> <th id = "95"></th>
-                <th id = "96"></th> <th id = "97"></th> <th id = "98"></th>
-                <th id = "99"></th> <th id = "9a"></th> <th id = "9b"></th>
+                <th id = "91"> </th> <th id = "92"> </th>
+                <th id = "93"> </th> <th id = "94"> </th> <th id = "95"> </th>
+                <th id = "96"> </th> <th id = "97"> </th> <th id = "98"> </th>
+                <th id = "99"> </th> <th id = "9a"> </th> <th id = "9b"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="3451189">
                   <label for="riodejaneiro">リオデジャネイロ</label></th>
-                <th id = "a1"></th> <th id = "a2"></th>
-                <th id = "a3"></th> <th id = "a4"></th> <th id = "a5"></th>
-                <th id = "a6"></th> <th id = "a7"></th> <th id = "a8"></th>
-                <th id = "a9"></th> <th id = "aa"></th> <th id = "ab"></th>
+                <th id = "a1"> </th> <th id = "a2"> </th>
+                <th id = "a3"> </th> <th id = "a4"> </th> <th id = "a5"> </th>
+                <th id = "a6"> </th> <th id = "a7"> </th> <th id = "a8"> </th>
+                <th id = "a9"> </th> <th id = "aa"> </th> <th id = "ab"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="5128581">
                   <label for="newyork">ニューヨーク</label></th>
-                <th id = "b1"></th> <th id = "b2"></th>
-                <th id = "b3"></th> <th id = "b4"></th> <th id = "b5"></th>
-                <th id = "b6"></th> <th id = "b7"></th> <th id = "b8"></th>
-                <th id = "b9"></th> <th id = "ba"></th> <th id = "bb"></th>
+                <th id = "b1"> </th> <th id = "b2"> </th>
+                <th id = "b3"> </th> <th id = "b4"> </th> <th id = "b5"> </th>
+                <th id = "b6"> </th> <th id = "b7"> </th> <th id = "b8"> </th>
+                <th id = "b9"> </th> <th id = "ba"> </th> <th id = "bb"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="5368361">
                   <label for="losangeles">ロサンゼルス</label></th>
-                <th id = "c1"></th> <th id = "c2"></th>
-                <th id = "c3"></th> <th id = "c4"></th> <th id = "c5"></th>
-                <th id = "c6"></th> <th id = "c7"></th> <th id = "c8"></th>
-                <th id = "c9"></th> <th id = "ca"></th> <th id = "cb"></th>
+                <th id = "c1"> </th> <th id = "c2"> </th>
+                <th id = "c3"> </th> <th id = "c4"> </th> <th id = "c5"> </th>
+                <th id = "c6"> </th> <th id = "c7"> </th> <th id = "c8"> </th>
+                <th id = "c9"> </th> <th id = "ca"> </th> <th id = "cb"> </th>
               </tr>
             </table>
           </div>
