--- a/test.html
+++ b/test.html
@@ -15,8 +15,6 @@
   <body>
     <header>
         <h1> 今日の天気 </h1>
-        <p><button  id = "sendRequest">検索</button></p>
-    <div id = "placeholder"></div>
     </header>
   
       <!-- 第四、五回課題
@@ -28,97 +26,98 @@
   
       <section>
         <h2>検索したい地域を選んでね</h2>
+        <p><button  id = "sendRequest">検索</button></p>
         <div>
           <div>
             <table>
         
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="360630">
-                  <label for="cairo">カイロ</label></th>
-                <th id = "11"> </th> <th id = "12"> </th>
-                <th id = "13"> </th> <th id = "14"> </th> <th id = "15"> </th>
-                <th id = "16"> </th> <th id = "17"> </th> <th id = "18"> </th>
-                <th id = "19"> </th> <th id = "1a"> </th> <th id = "1b"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="360630">
+                  <label for="cairo">カイロ</label></td>
+                <td id = "11"> </td> <td id = "12"> </td>
+                <td id = "13"> </td> <td id = "14"> </td> <td id = "15"> </td>
+                <td id = "16"> </td> <td id = "17"> </td> <td id = "18"> </td>
+                <td id = "19"> </td> <td id = "1a"> </td> <td id = "1b"> </td>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="524901">
-                  <label for="moscow">モスクワ</label></th>
-                <th id = "21"> </th> <th id = "22"> </th>
-                <th id = "23"> </th> <th id = "24"> </th> <th id = "25"> </th>
-                <th id = "26"> </th> <th id = "27"> </th> <th id = "28"> </th>
-                <th id = "29"> </th> <th id = "2a"> </th> <th id = "2b"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="524901">
+                  <label for="moscow">モスクワ</label></td>
+                <td id = "21"> </td> <td id = "22"> </td>
+                <td id = "23"> </td> <td id = "24"> </td> <td id = "25"> </td>
+                <td id = "26"> </td> <td id = "27"> </td> <td id = "28"> </td>
+                <td id = "29"> </td> <td id = "2a"> </td> <td id = "2b"> </td>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="993800">
-                  <label for="johannesburg">ヨハネスブルク</label></th>
-                <th id = "31"> </th> <th id = "32"> </th>
-                <th id = "33"> </th> <th id = "34"> </th> <th id = "35"> </th>
-                <th id = "36"> </th> <th id = "37"> </th> <th id = "38"> </th>
-                <th id = "39"> </th> <th id = "3a"> </th> <th id = "3b"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="993800">
+                  <label for="johannesburg">ヨハネスブルク</label></td>
+                <td id = "31"> </td> <td id = "32"> </td>
+                <td id = "33"> </td> <td id = "34"> </td> <td id = "35"> </td>
+                <td id = "36"> </td> <td id = "37"> </td> <td id = "38"> </td>
+                <td id = "39"> </td> <td id = "3a"> </td> <td id = "3b"> </td>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="1816670">
-                  <label for="beijing">北京</label></th>
-                <th id = "41"> </th> <th id = "42"> </th>
-                <th id = "43"> </th> <th id = "44"> </th> <th id = "45"> </th>
-                <th id = "46"> </th> <th id = "47"> </th> <th id = "48"> </th>
-                <th id = "49"> </th> <th id = "4a"> </th> <th id = "4b"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="1816670">
+                  <label for="beijing">北京</label></td>
+                <td id = "41"> </td> <td id = "42"> </td>
+                <td id = "43"> </td> <td id = "44"> </td> <td id = "45"> </td>
+                <td id = "46"> </td> <td id = "47"> </td> <td id = "48"> </td>
+                <td id = "49"> </td> <td id = "4a"> </td> <td id = "4b"> </td>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="1850147">
-                  <label for="tokyo">東京</label></th>
-                <th id = "51"> </th> <th id = "52"> </th>
-                <th id = "53"> </th> <th id = "54"> </th> <th id = "55"> </th>
-                <th id = "56"> </th> <th id = "57"> </th> <th id = "58"> </th>
-                <th id = "59"> </th> <th id = "5a"> </th> <th id = "5b"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="1850147">
+                  <label for="tokyo">東京</label></td>
+                <td id = "51"> </td> <td id = "52"> </td>
+                <td id = "53"> </td> <td id = "54"> </td> <td id = "55"> </td>
+                <td id = "56"> </td> <td id = "57"> </td> <td id = "58"> </td>
+                <td id = "59"> </td> <td id = "5a"> </td> <td id = "5b"> </td>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="1880252">
-                  <label for="singapore">シンガポール</label></th>
-                <th id = "61"> </th> <th id = "62"> </th>
-                <th id = "63"> </th> <th id = "64"> </th> <th id = "65"> </th>
-                <th id = "66"> </th> <th id = "67"> </th> <th id = "68"> </th>
-                <th id = "69"> </th> <th id = "6a"> </th> <th id = "6b"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="1880252">
+                  <label for="singapore">シンガポール</label></td>
+                <td id = "61"> </td> <td id = "62"> </td>
+                <td id = "63"> </td> <td id = "64"> </td> <td id = "65"> </td>
+                <td id = "66"> </td> <td id = "67"> </td> <td id = "68"> </td>
+                <td id = "69"> </td> <td id = "6a"> </td> <td id = "6b"> </td>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="2147714">
-                  <label for="sydney">シドニー</label></th>
-                <th id = "71"> </th> <th id = "72"> </th>
-                <th id = "73"> </th> <th id = "74"> </th> <th id = "75"> </th>
-                <th id = "76"> </th> <th id = "77"> </th> <th id = "78"> </th>
-                <th id = "79"> </th> <th id = "7a"> </th> <th id = "7b"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="2147714">
+                  <label for="sydney">シドニー</label></td>
+                <td id = "71"> </td> <td id = "72"> </td>
+                <td id = "73"> </td> <td id = "74"> </td> <td id = "75"> </td>
+                <td id = "76"> </td> <td id = "77"> </td> <td id = "78"> </td>
+                <td id = "79"> </td> <td id = "7a"> </td> <td id = "7b"> </td>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="2643743">
-                  <label for="london">ロンドン</label></th>
-                <th id = "81"> </th> <th id = "82"> </th>
-                <th id = "83"> </th> <th id = "84"> </th> <th id = "85"> </th>
-                <th id = "86"> </th> <th id = "87"> </th> <th id = "88"> </th>
-                <th id = "89"> </th> <th id = "8a"> </th> <th id = "8b"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="2643743">
+                  <label for="london">ロンドン</label></td>
+                <td id = "81"> </td> <td id = "82"> </td>
+                <td id = "83"> </td> <td id = "84"> </td> <td id = "85"> </td>
+                <td id = "86"> </td> <td id = "87"> </td> <td id = "88"> </td>
+                <td id = "89"> </td> <td id = "8a"> </td> <td id = "8b"> </td>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="2968815">
-                  <label for="paris">パリ</label></th>
-                <th id = "91"> </th> <th id = "92"> </th>
-                <th id = "93"> </th> <th id = "94"> </th> <th id = "95"> </th>
-                <th id = "96"> </th> <th id = "97"> </th> <th id = "98"> </th>
-                <th id = "99"> </th> <th id = "9a"> </th> <th id = "9b"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="2968815">
+                  <label for="paris">パリ</label></td>
+                <td id = "91"> </td> <td id = "92"> </td>
+                <td id = "93"> </td> <td id = "94"> </td> <td id = "95"> </td>
+                <td id = "96"> </td> <td id = "97"> </td> <td id = "98"> </td>
+                <td id = "99"> </td> <td id = "9a"> </td> <td id = "9b"> </td>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="3451189">
-                  <label for="riodejaneiro">リオデジャネイロ</label></th>
-                <th id = "a1"> </th> <th id = "a2"> </th>
-                <th id = "a3"> </th> <th id = "a4"> </th> <th id = "a5"> </th>
-                <th id = "a6"> </th> <th id = "a7"> </th> <th id = "a8"> </th>
-                <th id = "a9"> </th> <th id = "aa"> </th> <th id = "ab"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="3451189">
+                  <label for="riodejaneiro">リオデジャネイロ</label></td>
+                <td id = "a1"> </td> <td id = "a2"> </td>
+                <td id = "a3"> </td> <td id = "a4"> </td> <td id = "a5"> </td>
+                <td id = "a6"> </td> <td id = "a7"> </td> <td id = "a8"> </td>
+                <td id = "a9"> </td> <td id = "aa"> </td> <td id = "ab"> </td>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="5128581">
-                  <label for="newyork">ニューヨーク</label></th>
-                <th id = "b1"> </th> <th id = "b2"> </th>
-                <th id = "b3"> </th> <th id = "b4"> </th> <th id = "b5"> </th>
-                <th id = "b6"> </th> <th id = "b7"> </th> <th id = "b8"> </th>
-                <th id = "b9"> </th> <th id = "ba"> </th> <th id = "bb"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="5128581">
+                  <label for="newyork">ニューヨーク</label></td>
+                <td id = "b1"> </td> <td id = "b2"> </td>
+                <td id = "b3"> </td> <td id = "b4"> </td> <td id = "b5"> </td>
+                <td id = "b6"> </td> <td id = "b7"> </td> <td id = "b8"> </td>
+                <td id = "b9"> </td> <td id = "ba"> </td> <td id = "bb"> </td>
               </tr>
               <tr>
                 <td><input type="radio" name="kensaku" id="city" value="5368361">
@@ -170,6 +169,7 @@
     td {
       text-align: left;
       padding-left: 24px;
+      border:solid 1px #1d1f4e;
       vertical-align: middle;
     }
 
