--- a/test.html
+++ b/test.html
@@ -26,107 +26,44 @@
   
       <section>
         <h2>検索したい地域を選んでね</h2>
+        <input type="radio" name="kensaku" id="city1" value="360630">
+        <label for="kairo">カイロ</label>
+        <input type="radio" name="kensaku" id="city2" value="524901">
+        <label for="moscow">モスクワ</label>
+        <input type="radio" name="kensaku" id="city3" value="993800">
+        <label for="johannesburg">ヨハネスブルク</label>
+        <input type="radio" name="kensaku" id="city4" value="1816670">
+        <label for="beijing">北京</label>
+        <input type="radio" name="kensaku" id="city5" value="1850147">
+        <label for="tokyo">東京</label>
+        <input type="radio" name="kensaku" id="city6" value="1880252">
+        <label for="singapore">シンガポール</label>
+        <input type="radio" name="kensaku" id="city7" value="2147714">
+        <label for="sydney">シドニー</label>
+        <input type="radio" name="kensaku" id="city8" value="2643743">
+        <label for="london">ロンドン</label>
+        <input type="radio" name="kensaku" id="city9" value="2968815">
+        <label for="paris">パリ</label>
+        <input type="radio" name="kensaku" id="citya" value="3451189">
+        <label for="riodejaneiro">リオデジャネイロ</label>
+        <input type="radio" name="kensaku" id="cityb" value="5128581">
+        <label for="newyork">ニューヨーク</label>
+        <input type="radio" name="kensaku" id="cityc" value="5368361">
+        <label for="losangeles">ロサンゼルス</label>
+
         <p><button  id = "sendRequest">検索</button></p>
         <div>
           <div>
             <table>
         
               <tr>
-                <td><input type="radio" name="kensaku" id="city1" value="360630">
-                  <label for="cairo">カイロ</label></td>
+                <td id = "name"></td>
                 <td id = "11"> </td> <td id = "12"> </td>
                 <td id = "13"> </td> <td id = "14"> </td> <td id = "15"> </td>
                 <td id = "16"> </td> <td id = "17"> </td> <td id = "18"> </td>
-                <td id = "19"> </td> <td id = "1a"> </td> <td id = "1b"> </td>
+                <td id = "19"> </td> <td id = "1a"> </td>
               </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="city2" value="524901">
-                  <label for="moscow">モスクワ</label></td>
-                <td id = "21"> </td> <td id = "22"> </td>
-                <td id = "23"> </td> <td id = "24"> </td> <td id = "25"> </td>
-                <td id = "26"> </td> <td id = "27"> </td> <td id = "28"> </td>
-                <td id = "29"> </td> <td id = "2a"> </td> <td id = "2b"> </td>
-              </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="city3" value="993800">
-                  <label for="johannesburg">ヨハネスブルク</label></td>
-                <td id = "31"> </td> <td id = "32"> </td>
-                <td id = "33"> </td> <td id = "34"> </td> <td id = "35"> </td>
-                <td id = "36"> </td> <td id = "37"> </td> <td id = "38"> </td>
-                <td id = "39"> </td> <td id = "3a"> </td> <td id = "3b"> </td>
-              </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="city4" value="1816670">
-                  <label for="beijing">北京</label></td>
-                <td id = "41"> </td> <td id = "42"> </td>
-                <td id = "43"> </td> <td id = "44"> </td> <td id = "45"> </td>
-                <td id = "46"> </td> <td id = "47"> </td> <td id = "48"> </td>
-                <td id = "49"> </td> <td id = "4a"> </td> <td id = "4b"> </td>
-              </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="city5" value="1850147">
-                  <label for="tokyo">東京</label></td>
-                <td id = "51"> </td> <td id = "52"> </td>
-                <td id = "53"> </td> <td id = "54"> </td> <td id = "55"> </td>
-                <td id = "56"> </td> <td id = "57"> </td> <td id = "58"> </td>
-                <td id = "59"> </td> <td id = "5a"> </td> <td id = "5b"> </td>
-              </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="city6" value="1880252">
-                  <label for="singapore">シンガポール</label></td>
-                <td id = "61"> </td> <td id = "62"> </td>
-                <td id = "63"> </td> <td id = "64"> </td> <td id = "65"> </td>
-                <td id = "66"> </td> <td id = "67"> </td> <td id = "68"> </td>
-                <td id = "69"> </td> <td id = "6a"> </td> <td id = "6b"> </td>
-              </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="city7" value="2147714">
-                  <label for="sydney">シドニー</label></td>
-                <td id = "71"> </td> <td id = "72"> </td>
-                <td id = "73"> </td> <td id = "74"> </td> <td id = "75"> </td>
-                <td id = "76"> </td> <td id = "77"> </td> <td id = "78"> </td>
-                <td id = "79"> </td> <td id = "7a"> </td> <td id = "7b"> </td>
-              </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="city8" value="2643743">
-                  <label for="london">ロンドン</label></td>
-                <td id = "81"> </td> <td id = "82"> </td>
-                <td id = "83"> </td> <td id = "84"> </td> <td id = "85"> </td>
-                <td id = "86"> </td> <td id = "87"> </td> <td id = "88"> </td>
-                <td id = "89"> </td> <td id = "8a"> </td> <td id = "8b"> </td>
-              </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="city9" value="2968815">
-                  <label for="paris">パリ</label></td>
-                <td id = "91"> </td> <td id = "92"> </td>
-                <td id = "93"> </td> <td id = "94"> </td> <td id = "95"> </td>
-                <td id = "96"> </td> <td id = "97"> </td> <td id = "98"> </td>
-                <td id = "99"> </td> <td id = "9a"> </td> <td id = "9b"> </td>
-              </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="citya" value="3451189">
-                  <label for="riodejaneiro">リオデジャネイロ</label></td>
-                <td id = "a1"> </td> <td id = "a2"> </td>
-                <td id = "a3"> </td> <td id = "a4"> </td> <td id = "a5"> </td>
-                <td id = "a6"> </td> <td id = "a7"> </td> <td id = "a8"> </td>
-                <td id = "a9"> </td> <td id = "aa"> </td> <td id = "ab"> </td>
-              </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="cityb" value="5128581">
-                  <label for="newyork">ニューヨーク</label></td>
-                <td id = "b1"> </td> <td id = "b2"> </td>
-                <td id = "b3"> </td> <td id = "b4"> </td> <td id = "b5"> </td>
-                <td id = "b6"> </td> <td id = "b7"> </td> <td id = "b8"> </td>
-                <td id = "b9"> </td> <td id = "ba"> </td> <td id = "bb"> </td>
-              </tr>
-              <tr>
-                <td><input type="radio" name="kensaku" id="cityc" value="5368361">
-                  <label for="losangeles">ロサンゼルス</label></td>
-                <td id = "c1"> </td> <td id = "c2"> </td>
-                <td id = "c3"> </td> <td id = "c4"> </td> <td id = "c5"> </td>
-                <td id = "c6"> </td> <td id = "c7"> </td> <td id = "c8"> </td>
-                <td id = "c9"> </td> <td id = "ca"> </td> <td id = "cb"> </td>
-              </tr>
+
             </table>
           </div>
         </div>
