--- a/test.html
+++ b/test.html
@@ -62,9 +62,9 @@
               </tr>
         
               <tr>
-                <td id = "name"></td><td id = "lon"></td> <td id = "12"></td>
-                <td id = "13"></td> <td id = "14"></td> <td id = "15"></td>
-                <td id = "16"></td> <td id = "17"></td> <td id = "18"></td>
+                <td id = "name"></td><td id = "lon"></td> <td id = "lat"></td>
+                <td id = "weather"></td> <td id = "temp_min"></td> <td id = "temp_max"></td>
+                <td id = "humidity"></td> <td id = "speed"></td> <td id = "deg"></td>
               </tr>
 
             </table>
