--- a/test.html
+++ b/test.html
@@ -52,6 +52,7 @@
         <label for="losangeles">ロサンゼルス</label>
 
         <p><button  id = "sendRequest">検索</button></p>
+        <p><button id = "reset">リセット</button></p>
         <div>
           <div>
             <table>
